Closed Bug 324861 Opened 20 years ago Closed 20 years ago

Bookmarks Bar is sometimes drawn twice

Categories

(Camino Graveyard :: Toolbars & Menus, defect, P2)

PowerPC
macOS
defect

Tracking

(Not tracked)

VERIFIED FIXED
Camino1.0

People

(Reporter: grikdog, Assigned: sfraser_bugs)

References

Details

(Keywords: fixed1.8.0.1, fixed1.8.1, regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060124 Camino/1.0b2+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060124 Camino/1.0b2+ When launched from DragThing, the Bookmarks Bar is drawn twice. Opening a new window resolves the error. Reproducible: Always Steps to Reproduce: 1. Make sure James Thompson's DragThing has a Camino icon in a dock. 2. Log in to your user/admin account. 3. Click on the DragThing Camino icon. Actual Results: The Bookmark Bar is duplicated. I'll append a screen shot shortly. Expected Results: Only one copy of the Bookmark Bar please.
Attached image screen shot
is it only dragThing? if you load the same version of camino from the finder it's fine? also, what if camino is launched by clicking a url in, say, your mail app? same behavior, or different?
I've never gotten exactly that, but I *have* gotten a doubled bookmark bar before where the upper one was blank and un-unified. Closing the window and opening a new one (it only ever happened on first launch) always fixed it. Possibly related? cl
Status: UNCONFIRMED → NEW
Ever confirmed: true
Dave, can you try something for me? Go into your Preferences > Tabs > Always Show Tab Bar. Quit Camino and re-open it so as to trigger the bug, and post *that* screenshot here. cl
In my case, DragThing was not involved (and having it running made no difference). Another thing I see is momentary bad toolbar drawing when Camino is launched via an external app (all the buttons initially appear on top of eachother).
Mine, 1.0 material.
Assignee: mikepinkerton → sfraser_bugs
Flags: camino1.0+
Priority: -- → P2
Target Milestone: --- → Camino1.0
This is a regression from changes I made for bug 169816. I made the bookmarks toolbar listen for bookmark changes (so that it redraws when its contents are sorted), but because of this is got notifications during bookmark loading on the loading thread, some of which could result in NSView twiddling (which is no threadsafe). So we have to not send out bookmark notifications from the bookmark loading thread.
Status: NEW → ASSIGNED
Attached patch PatchSplinter Review
This patch cleans up the bookmark loading notifications: * The "suppress notifications" flag is now a lock-protected member of the BookmarkManager, rather than a raw static. * Notifications are turned off around all code that changes bookmarks on the loading thread. * I removed the BookmarkIconChangedNotification type, since it was subsumed by the existing BookmarkItemChangedNotification with the icon changed flag. * The BookmarkToolbar now ignores rebuilds when its toolbar folder is nil (i.e. before bookmarks have loaded). The particular problem described by this bug happened because the BookmarkToolbar was getting notifications on the loading thread about stuff changing, and trying to lay out the bookmark buttons. AppKit is not threadsafe for NSView changes, so that explains the whacky layout issues.
Fixed with the patch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: