Fix bug 324861: issues drawing personal toolbar if Camino is launched via a GetURL. That was a problem because we'd create the first window (with bookmarks toolbar) before loading bookmarks, causing the bookmarks toolbar to get bookmark changed notifications on a non-UI thread, thus hosing AppKit. The fix is to ensure that we never fire notifications on the bookmark loading thread (in a threadsafe way!), and fix the bookmarks toolbar to behave if its toolbar folder is nil (indicating that bookmarks haven't loaded yet).